Final errors eliminated

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div id="ways">
             <a href="#facebook" class="contact" target="_blank">Facebook</a>
             <a href="#twitter" class="contact" target="_blank">Twitter</a>
-            <a href="https://codepen.io/qurat-ul-ain-the-styleful" class="profile-link" target="_blank">Free code camp</a>
+            <a href="https://codepen.io/qurat-ul-ain-the-styleful" id="profile-link" target="_blank">Free code camp</a>
             <a href="#email" class="contact" target="_blank">Mail</a>
             <a href="#Phone" class="contact" target="_blank">Call me!</a>
         </div>
